feat(docker): optimize JVM for high concurrency and simplify deployment docs
- Upgrade to ZGC with generational mode for sub-millisecond GC pauses
- Add virtual thread optimization (Xss256k, scheduler parallelism)
- Add comprehensive JVM tuning (pre-touch, tiered compilation, GC logs)
- Add .env.example template for easy configuration
- Simplify README.md deployment guide, merge Windows section
- Update JVM parameter documentation

Optimizes for high concurrency and low latency scenarios on Java 21.